--- a/trunk/App/AndroidManifest.xml
+++ b/trunk/App/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="org.praisebeer.app"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/appName">
+    <application android:icon="@drawable/icon" android:label="@string/appName" android:debuggable="true" android:allowClearUserData="true">
         <activity android:name=".PraiseBeer"
                   android:label="@string/appName"
                   android:screenOrientation="portrait">
@@ -12,7 +12,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="UpcResults" android:label="@string/scanResults">
+        <activity android:name="UpcResults" 
+                  android:label="@string/scanResults"
+                  android:screenOrientation="portrait">
         </activity>
 
     </application>
