Converting all tabs to spaces. Adding error code handling for UPC code not found. Stemmed out initial manual entry view+activity.

--- a/App/AndroidManifest.xml
+++ b/App/AndroidManifest.xml
@@ -23,6 +23,9 @@
                   android:label="@string/searchingEllipsis"
                   android:screenOrientation="portrait">
         </activity>
+        <activity android:name="ManualUserEntry" 
+                  android:label="@string/upcCodeNotFound">
+        </activity>
 
     </application>
     <uses-sdk android:minSdkVersion="4" />
