--- a/trunk/Api/app.yaml
+++ b/trunk/Api/app.yaml
@@ -6,6 +6,8 @@ api_version: 1
 handlers:
 - url: /upclookup
   script: upcLookup.py
+- url: /populateUPCs
+  script: populateUPCs.py
 - url: /cron
   script: cron.py
 - url: /favicon.ico
