--- a/trunk/Api/app.yaml
+++ b/trunk/Api/app.yaml
@@ -8,11 +8,17 @@ handlers:
   script: upcLookup.py
 - url: /namelookup
   script: nameLookup.py
-- url: /populateUPCs
-  script: populateUPCs.py
 - url: /cron
   script: cron.py
 - url: /favicon.ico
   static_files: favicon.ico
   upload: favicon.ico
-  
+- url: /flushDataStore
+  script: flushDataStore.py
+  login: admin
+- url: /flushMemcache
+  script: flushMemcache.py
+  login: admin      
+- url: /remote_api
+  script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
+  login: admin  
