Add in support to flush the memcache and flush our datastore.
*) flushDataStore.py
  -) hard-coded number of entries to delete per URL hit
  -) modify to specify this number in the future
*) flushMemcache.py
  -) flush the memcache per URL hit
  -) specify a upc code (e.g. flushMemcache?upc=xxxxxxxxxxxxx) to clear just an individual entry

--- a/Api/app.yaml
+++ b/Api/app.yaml
@@ -8,11 +8,17 @@ handlers:
   script: upcLookup.py
 - url: /namelookup
   script: nameLookup.py
-- url: /populateUPCs
-  script: populateUPCs.py
 - url: /cron
   script: cron.py
 - url: /favicon.ico
   static_files: favicon.ico
   upload: favicon.ico
-  
+- url: /flushDataStore
+  script: flushDataStore.py
+  login: admin
+- url: /flushMemcache
+  script: flushMemcache.py
+  login: admin      
+- url: /remote_api
+  script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
+  login: admin  
