--- a/App/AndroidManifest.xml
+++ b/App/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
 
     </application>
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:minSdkVersion="4"
+              android:targetSdkVersion="4"/>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
