Allowing users to modify existing descriptions of entries. Pulling name off BA site when getting data.

--- a/App/AndroidManifest.xml
+++ b/App/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity android:name="ManualUserEntry" 
                   android:label="@string/upcCodeNotFound">
         </activity>
+        <activity android:name="FixEntry" 
+                  android:label="@string/fixExistingEntryTitle">
+        </activity>
         <activity android:name="ErrorDisplay" 
                   android:label="@string/errorOccured">
         </activity>
