--- a/trunk/Api/app.yaml
+++ b/trunk/Api/app.yaml
@@ -2,6 +2,8 @@ application: praisebeer
 version: 1
 runtime: python
 api_version: 1
+derived_file_type:
+- python_precompiled
 
 handlers:
 - url: /upclookup
