--- a/trunk/App/AndroidManifest.xml
+++ b/trunk/App/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.praisebeer.app"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionCode="2"
+      android:versionName="1.1"
+      android:installLocation="auto">
     <application android:theme="@android:style/Theme.Light"
                  android:icon="@drawable/icon"
                  android:label="@string/appName"
-                 android:debuggable="true"
-                 android:allowClearUserData="true">
+                 android:allowClearUserData="true"
+                 >
         <activity android:name="FrontController"
                   android:label="@string/appName"
                   android:screenOrientation="portrait">
