Add new endpoint to look up beer based on the URL ID from BA

--- a/Api/app.yaml
+++ b/Api/app.yaml
@@ -12,6 +12,8 @@ handlers:
   script: nameLookup.py
 - url: /namesearch
   script: nameSearch.py
+- url: /idlookup
+  script: idLookup.py
 - url: /cron
   script: cron.py
 - url: /favicon.ico
