New feature to allow users to search for a beer by name instead of scanning the beer. Two new intent classes have been added. One to show the search form, and another to show the results of the search. Also added a number of new methods to the ApiHandler class for these requests. Still need to add error handling and probably a bit of code cleanup.

--- a/App/AndroidManifest.xml
+++ b/App/AndroidManifest.xml
@@ -28,6 +28,12 @@
         <activity android:name="ManualUserEntry" 
                   android:label="@string/upcCodeNotFound">
         </activity>
+        <activity android:name="SearchForBeer" 
+                  android:label="@string/searchForBeer">
+        </activity>
+        <activity android:name="SearchResultsDisplay" 
+                  android:label="@string/searchResults">
+        </activity>
         <activity android:name="FixEntry" 
                   android:label="@string/fixExistingEntryTitle">
         </activity>
