--- a/App/AndroidManifest.xml
+++ b/App/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.praisebeer.app"
-      android:versionCode="3"
-      android:versionName="1.2"
-      android:installLocation="auto">
+      android:versionCode="4"
+      android:versionName="1.3">
     <application android:theme="@android:style/Theme.Light"
                  android:icon="@drawable/icon"
                  android:label="@string/appName"
@@ -42,7 +41,6 @@
         </activity>
 
     </application>
-    <uses-sdk android:minSdkVersion="4"
-              android:targetSdkVersion="4"/>
+    <uses-sdk android:minSdkVersion="4"/>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
